# cpp_wilson_dslash

./: .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  Makefile.in  NEWS  configure  configure.ac
include/: Makefile.am  Makefile.in  allocate.h  cache.h  cpp_clover_parscalar.h  cpp_clover_scalar.h  cpp_clover_site_apply_32bit.h  cpp_clover_site_apply_64bit.h  cpp_dslash_matvec32bit_c.h  cpp_dslash_matvec64bit_c.h  cpp_dslash_parscalar.h  cpp_dslash_parscalar_decomp_32bit_sse2.h  cpp_dslash_parscalar_decomp_64bit_c.h  cpp_dslash_parscalar_decomp_64bit_sse2.h  cpp_dslash_parscalar_decomp_hvv_32bit_sse2.h  cpp_dslash_parscalar_decomp_hvv_64bit_sse2.h  cpp_dslash_parscalar_mvv_recons_32bit_c.h  cpp_dslash_parscalar_mvv_recons_32bit_sse2.h  cpp_dslash_parscalar_mvv_recons_64bit_c.h  cpp_dslash_parscalar_mvv_recons_64bit_sse2.h  cpp_dslash_parscalar_recons_32bit_c.h  cpp_dslash_parscalar_recons_32bit_sse2.h  cpp_dslash_parscalar_recons_64bit_c.h  cpp_dslash_parscalar_recons_64bit_sse2.h  cpp_dslash_parscalar_types.h  cpp_dslash_parscalar_utils_32bit.h  cpp_dslash_parscalar_utils_64bit.h  cpp_dslash_qdp_packer.h  cpp_dslash_scalar.h  cpp_dslash_scalar_32bit.h  cpp_dslash_scalar_32bit_c.h  cpp_dslash_scalar_32bit_sse.h  cpp_dslash_scalar_64bit.h  cpp_dslash_scalar_64bit_c.h  cpp_dslash_scalar_64bit_sse.h  cpp_dslash_scalar_types.h  cpp_dslash_types.h  dispatch_parscalar.h  dispatch_scalar.h  dslash_config_internal.h.cmake.in  (+8 more)
lib/: CMakeLists.txt  Makefile.am  Makefile.in  cpp_clover_parscalar_32bit.cc  cpp_clover_parscalar_64bit.cc  cpp_clover_scalar_32bit.cc  cpp_clover_scalar_64bit.cc  cpp_dslash_3d_scalar_32bit.cc  cpp_dslash_3d_scalar_64bit.cc  cpp_dslash_parscalar_32bit.cc  cpp_dslash_parscalar_3d_32bit.cc  cpp_dslash_parscalar_3d_64bit.cc  cpp_dslash_parscalar_64bit.cc  cpp_dslash_parscalar_utils_32bit.cc  cpp_dslash_scalar_32bit.cc  cpp_dslash_scalar_64bit.cc  dispatch_parscalar.cc  dispatch_parscalar_openmp.cc  dispatch_parscalar_qmt.cc  dispatch_scalar.cc  dispatch_scalar_openmp.cc  dispatch_scalar_qmt.cc  qdp_packer_nopad.cc  shift_table_scalar.cc
tests/: CMakeLists.txt  Makefile.am  Makefile.in  dslashm_w.cc  reunit.cc  sse32.h  sse64.h  t_dslash.cc  t_dslash_3d.cc  t_site_ops_parscalar.cc  t_site_ops_scalar.cc  testClover.cc  testDecomp32bit.cc  testDecomp64bit.cc  testDecompHvv32bit.cc  testDecompHvv64bit.cc  testDslash3D.cc  testDslashFull.cc  testMvvRecons32bit.cc  testMvvRecons64bit.cc  testRecons32bit.cc  testRecons64bit.cc  testSiteDslash32bit.cc  testSiteDslash64bit.cc  testvol.h  timeClover.cc  timeDecomp.cc  timeDslash.cc  timeDslash3D.cc  time_decomp.cc  time_dslash.cc  time_dslash_3d.cc  unittest.h
